src/app/components/punchPage.css
.punch {
    max-width: 100%;
    margin: 0;
    flex-basis: 100%;
    display: flex;
    flex-direction: column;
    height: calc(100vh - 48px);
    overflow: auto;
}

.punch h1 {
    width: 100%;
}

.punch .bold-label label {
    font-weight: bold;
}

.punch .input-row {
    display: inline-flex;
    width: 100%;
    margin: 0.5rem 0 1rem;
}

.punch .input-row .right {
    margin-left: 30px;
}

.punch .panels-wrapper {
    flex-basis: 100%;
    display: flex;
    flex-direction: row;
    min-height: 100px;
}

.punch .panels-wrapper .punch_form,
.punch .panels-wrapper .omsorgspenger_punch_form {
    margin-right: 0.5rem;
    flex-basis: 100%;
    overflow-y: auto;
    border-color: #a0a0a0;
}

.punch .panels-wrapper .punch_form .container,
.punch .panels-wrapper .omsorgspenger_punch_form .container {
    text-align: left;
    padding-top: 0;
    padding-left: 0;
    margin-left: 0;
}

.punch .panels-wrapper .punch_form::-webkit-scrollbar,
.punch .panels-wrapper .omsorgspenger_punch_form::-webkit-scrollbar {
    width: 0.5rem;
}

.punch .panels-wrapper .punch_form::-webkit-scrollbar-track,
.punch .panels-wrapper .omsorgspenger_punch_form::-webkit-scrollbar-track {
    border-radius: 2px;
}

.punch .panels-wrapper .punch_form::-webkit-scrollbar-thumb,
.punch .panels-wrapper .omsorgspenger_punch_form::-webkit-scrollbar-thumb {
    background: #a0a0a0;
    border-radius: 2px;
}

.punch .panels-wrapper .punch_form::-webkit-scrollbar-thumb:hover,
.punch .panels-wrapper .omsorgspenger_punch_form::-webkit-scrollbar-thumb:hover {
    background: #6a6a6a;
}

.punch .panels-wrapper .punch_form .submit-knapper,
.punch .panels-wrapper .omsorgspenger_punch_form .submit-knapper {
    display: flex;
}

.punch .panels-wrapper .punch_form .submit-knapper .vent-knapp,
.punch .panels-wrapper .omsorgspenger_punch_form .submit-knapper .vent-knapp {
    margin-left: 1rem;
}

.punch .panels-wrapper .punch_form .klokkeslett,
.punch .panels-wrapper .omsorgspenger_punch_form .klokkeslett {
    margin-left: 0.5rem;
}

.punch .panels-wrapper .punch_form .opplysninger-om-soknaden-panel .input-row,
.punch .panels-wrapper .omsorgspenger_punch_form .opplysninger-om-soknaden-panel .input-row,
.punch .panels-wrapper .punch_form .opplysninger-om-soknaden-panel .horizontalRadios,
.punch .panels-wrapper .omsorgspenger_punch_form .opplysninger-om-soknaden-panel .horizontalRadios {
    margin: 0;
}

.punch .panels-wrapper .punch_form .knapperad .knapp1,
.punch .panels-wrapper .omsorgspenger_punch_form .knapperad .knapp1 {
    margin-right: 1rem;
}

.punch .panels-wrapper .punch_form .arbeidstider,
.punch .panels-wrapper .omsorgspenger_punch_form .arbeidstider {
    margin-top: 1rem;
}

.punch .panels-wrapper .punch_form .arbeidstider .arbeidstid-hjelpetext,
.punch .panels-wrapper .omsorgspenger_punch_form .arbeidstider .arbeidstid-hjelpetext {
    margin-left: 0.5rem;
}

.punch .panels-wrapper .punch_form .arbeidstidInfo,
.punch .panels-wrapper .omsorgspenger_punch_form .arbeidstidInfo {
    margin-top: 1rem;
    display: grid;
    row-gap: 1rem;
}

.punch .panels-wrapper .punch_form .arbeidstidInfo h3,
.punch .panels-wrapper .omsorgspenger_punch_form .arbeidstidInfo h3,
.punch .panels-wrapper .punch_form .arbeidstidInfo hr,
.punch .panels-wrapper .omsorgspenger_punch_form .arbeidstidInfo hr {
    margin: 0;
}

.punch .panels-wrapper .punch_form .countryselect,
.punch .panels-wrapper .omsorgspenger_punch_form .countryselect {
    padding-top: 1rem;
}

.punch .panels-wrapper .punch_form .ikkeregistrert,
.punch .panels-wrapper .omsorgspenger_punch_form .ikkeregistrert {
    font-family: 'Source Sans Pro', Arial, sans-serif;
    font-size: 1.1rem;
    line-height: 1.375rem;
    font-weight: 600;
}

.punch .panels-wrapper .punch_form .listepanel,
.punch .panels-wrapper .omsorgspenger_punch_form .listepanel {
    margin-bottom: 1rem;
}

.punch .panels-wrapper .punch_form .frilanserpanel,
.punch .panels-wrapper .omsorgspenger_punch_form .frilanserpanel {
    margin: 1rem 0;
}

.punch .panels-wrapper .punch_form .frilanserpanel .listepanel,
.punch .panels-wrapper .omsorgspenger_punch_form .frilanserpanel .listepanel {
    margin: 0.5rem 0 1rem -1rem;
}

.punch .panels-wrapper .punch_form .frilanserpanel .frilanser-startdato,
.punch .panels-wrapper .omsorgspenger_punch_form .frilanserpanel .frilanser-startdato {
    margin-bottom: 20px;
}

.punch .panels-wrapper .punch_form .frilanserpanel .frilanser-sluttdato,
.punch .panels-wrapper .omsorgspenger_punch_form .frilanserpanel .frilanser-sluttdato {
    margin-top: 1rem;
}

.punch .panels-wrapper .punch_form .sn-alertstripe,
.punch .panels-wrapper .omsorgspenger_punch_form .sn-alertstripe {
    margin-top: 1rem;
}

.punch .panels-wrapper .punch_form .selvstendigpanel,
.punch .panels-wrapper .omsorgspenger_punch_form .selvstendigpanel {
    padding-top: 0;
    margin: 1rem 0;
}

.punch .panels-wrapper .punch_form .selvstendigpanel .infoContainer,
.punch .panels-wrapper .omsorgspenger_punch_form .selvstendigpanel .infoContainer {
    padding: 1rem 0 0;
}

.punch .panels-wrapper .punch_form .selvstendigpanel .generelleopplysiniger,
.punch .panels-wrapper .omsorgspenger_punch_form .selvstendigpanel .generelleopplysiniger {
    margin-top: 1.5rem;
}

.punch .panels-wrapper .punch_form .selvstendigpanel .generelleopplysiniger .virksomhetsNavn,
.punch .panels-wrapper .omsorgspenger_punch_form .selvstendigpanel .generelleopplysiniger .virksomhetsNavn {
    margin-bottom: 0.5rem;
}

.punch .panels-wrapper .punch_form .selvstendigpanel .sn-regskasførernavn,
.punch .panels-wrapper .omsorgspenger_punch_form .selvstendigpanel .sn-regskasførernavn,
.punch .panels-wrapper .punch_form .selvstendigpanel .sn-regskasførertlf,
.punch .panels-wrapper .omsorgspenger_punch_form .selvstendigpanel .sn-regskasførertlf,
.punch .panels-wrapper .punch_form .selvstendigpanel .bruttoinntekt,
.punch .panels-wrapper .omsorgspenger_punch_form .selvstendigpanel .bruttoinntekt,
.punch .panels-wrapper .punch_form .selvstendigpanel .endringdato,
.punch .panels-wrapper .omsorgspenger_punch_form .selvstendigpanel .endringdato {
    margin-top: 0.5rem;
}

.punch .panels-wrapper .punch_form .selvstendigpanel .endringinntekt,
.punch .panels-wrapper .omsorgspenger_punch_form .selvstendigpanel .endringinntekt {
    margin: 0.5rem 0;
}

.punch .panels-wrapper .punch_form .selvstendigpanel .listepanel,
.punch .panels-wrapper .omsorgspenger_punch_form .selvstendigpanel .listepanel {
    margin: 0.5rem 0 1rem -1rem;
}

.punch .panels-wrapper .punch_form .selvstendigpanel .sn-startdatocontainer,
.punch .panels-wrapper .omsorgspenger_punch_form .selvstendigpanel .sn-startdatocontainer {
    display: flex;
    margin: 5px 0 10px;
}

.punch .panels-wrapper .punch_form .selvstendigpanel .sn-startdatocontainer .tom,
.punch .panels-wrapper .omsorgspenger_punch_form .selvstendigpanel .sn-startdatocontainer .tom {
    margin-left: 1rem;
}

.punch .panels-wrapper .punch_form .utenlandsoppholdpanel,
.punch .panels-wrapper .omsorgspenger_punch_form .utenlandsoppholdpanel {
    margin-top: 20px;
}

.punch .panels-wrapper .punch_form .listepaneler,
.punch .panels-wrapper .omsorgspenger_punch_form .listepaneler {
    margin: 1rem 0;
    border-radius: 5px;
}

.punch .panels-wrapper .punch_form .listepaneler .leggtillisteelementknapp,
.punch .panels-wrapper .omsorgspenger_punch_form .listepaneler .leggtillisteelementknapp,
.punch .panels-wrapper .punch_form .periodepanel .leggtilperiode,
.punch .panels-wrapper .omsorgspenger_punch_form .periodepanel .leggtilperiode {
    font-family: 'Source Sans Pro', Arial, sans-serif;
    font-size: 1rem;
    line-height: 1.375rem;
    font-weight: 400;
    background: none;
    border: none;
    padding: 0;
    display: inline-flex;
    align-items: center;
    margin: 1rem 0 0;
    color: #0067c5;
    text-decoration: underline;
    cursor: pointer;
}

.punch .panels-wrapper .punch_form .listepaneler .leggtillisteelementknapp .leggtilperiodeIcon,
.punch .panels-wrapper .omsorgspenger_punch_form .listepaneler .leggtillisteelementknapp .leggtilperiodeIcon,
.punch .panels-wrapper .punch_form .periodepanel .leggtilperiode .leggtilperiodeIcon,
.punch .panels-wrapper .omsorgspenger_punch_form .periodepanel .leggtilperiode .leggtilperiodeIcon {
    margin-right: 0.5rem;
}

.punch .panels-wrapper .punch_form .periodepanel,
.punch .panels-wrapper .omsorgspenger_punch_form .periodepanel {
    margin: 1rem 0;
}

.punch .panels-wrapper .punch_form .soknadsperiode-panel .soknadsperiodecontainer,
.punch .panels-wrapper .omsorgspenger_punch_form .soknadsperiode-panel .soknadsperiodecontainer,
.punch .panels-wrapper .punch_form .soknadsperiode-panel .periodepanel,
.punch .panels-wrapper .omsorgspenger_punch_form .soknadsperiode-panel .periodepanel {
    margin: 0;
    width: 100%;
}

.punch .panels-wrapper .punch_form .arbeidstakerpanel .infoContainer .col,
.punch .panels-wrapper .omsorgspenger_punch_form .arbeidstakerpanel .infoContainer .col {
    padding: 0 0.5rem;
}

.punch .panels-wrapper .punch_form .arbeidstakerpanel .infoContainer label,
.punch .panels-wrapper .omsorgspenger_punch_form .arbeidstakerpanel .infoContainer label {
    font-weight: bold;
}

.punch .panels-wrapper .punch_form .arbeidstakerpanel .infoContainer .skjemaelement,
.punch .panels-wrapper .omsorgspenger_punch_form .arbeidstakerpanel .infoContainer .skjemaelement {
    margin-top: 1rem;
}

.punch .panels-wrapper .punch_form .arbeidstakerpanel .leggtillisteelementknapp,
.punch .panels-wrapper .omsorgspenger_punch_form .arbeidstakerpanel .leggtillisteelementknapp {
    margin: 0 1rem 1rem;
}

.punch .panels-wrapper .punch_form .arbeidstakerpanel .listepaneler,
.punch .panels-wrapper .omsorgspenger_punch_form .arbeidstakerpanel .listepaneler {
    margin: 0.5rem 0 0 -1rem;
}

.punch .panels-wrapper .punch_form .listepanel.beredskapspanel .tilleggsinfo,
.punch .panels-wrapper .omsorgspenger_punch_form .listepanel.beredskapspanel .tilleggsinfo,
.punch .panels-wrapper .punch_form .listepanel.nattevaakspanel .tilleggsinfo,
.punch .panels-wrapper .omsorgspenger_punch_form .listepanel.nattevaakspanel .tilleggsinfo {
    margin: 1rem 1rem 0 0;
}

.punch .panels-wrapper .punch_form .beskrivelseAvOmsorgsrollen,
.punch .panels-wrapper .omsorgspenger_punch_form .beskrivelseAvOmsorgsrollen {
    margin-top: 1rem;
}

.punch .panels-wrapper .punch_form .sendknapp-wrapper,
.punch .panels-wrapper .omsorgspenger_punch_form .sendknapp-wrapper {
    margin-bottom: 0;
}

.punch .panels-wrapper .punch_form .fullfortmelding,
.punch .panels-wrapper .omsorgspenger_punch_form .fullfortmelding {
    margin-left: 0;
    margin-top: 1rem;
}

.punch .panels-wrapper .omsorgspenger_punch_form {
    border: none;
}

.punch .punch_mappetabell tbody tr:hover {
    background-color: #d8f9ff;
    cursor: pointer;
}

.punch .punch_mappetabell th {
    padding-top: 0;
}

.punch .punch_mappetabell_tom_soknad {
    text-align: center !important;
    color: #6a6a6a;
}

.ReactModal__Content {
    width: 50%;
    border: 1px solid #0067c5;
    box-sizing: border-box;
}

.flex-container {
    display: inline-flex;
    width: 100%;
}

.flex-container .hjelpetext {
    margin: 1rem;
}

.flex-container .hjelpetext :last-child {
    max-width: 30rem;
}

.flex-container .inputPanel {
    width: 100%;
}

.flex-container .legacy-checkbox-panel {
    width: 100%;
}

.loadingSpinner {
    position: relative;
    margin-bottom: -4rem;
    padding-bottom: 3rem;
}

.validertSoknadOppsummeringContainer:first-child > div {
    border: 0;
    margin-top: 0;
    padding-top: 0;
}

.punchPage__knapper {
    display: flex;
    flex-wrap: wrap;
}

.punchPage__knapper button {
    margin: 0 1rem 1rem 0;
}

.utregnetArbeidstid__container {
    display: grid;
    grid-template-columns: repeat(2, 243px);
}

